Version 16.23 - 16 January 2014

- dont remove pulseaudio-module-bluetooth (mga#12323)
- fix a rpmdrake crash (mga#12331)

Version 16.22 - 15 January 2014

- services:
  o use --no-block with chkconfig and systemctl enable to prevent systemd reload
    and potential crash (especially during first/live boot)
- harddrake:
  o fix detecting some wireless devices as scanners (mga#9895)
  o fix random order of fields with perl-5.18

Version 16.21 - 13 January 2014

- diskdrake:
  o do not propose check bad blocks for btrfs (Manuel Hiebel, mga#10116)
  o increase minimum partition width for Oxygen (mga#11977)
    (if not enough, we will disable labels on partitions buttons again)
- drakboot:
  o add minimal/experimental lightdm autologin support (mga#11746)
- harddrake, logdrake:
  o fix menu accelerators
- --version option:
  o display mga copyright too (mga#10289)

Version 16.18 - 28 December 2013

- detecting input devices:
  o display the real accessed /dev/input/eventX file (mga#8232)
  o do not crash if /dev/input/eventX doesn't exist (mga#10296)
  o do not fill logs with "Cannot open /dev/input/eventX" (mga#8232)
- draksec:
  o use expanders for clarity

Version 16.17 - 20 December 2013

- drakfont:
  o fix a crash (mga#12057)

Version 16.16 - 16 December 2013

- fix a drakx crash (mga#6031)

Version 16.15 - 12 December 2013

- workaround a gtk+3 issue resulting in blacked embbeded tools with some
  locales (eg: pl/uk) (mga#11969)

Version 16.13 - 10 December 2013

- localedrake:
  o fix crash when selecting an input method (mga#11939)

Version 16.12 - 9 December 2013

- partitioning wizard:
  o log failures (mga#11924)
  o workaround a crash (mga#11924)

Version 16.11 - 6 December 2013

- fix a crash in rpmdrake when package list is empty (mga#11901)

Version 16.8 - 5 December 2013

- prevent drakxtools-backend to require Glib::Object::Introspection (mga#11842)

Version 16.7 - 5 December 2013

- diskdrake:
  o fix a crash when creating partitions (mga#11876)
