@@ -1,5 +1,7 @@
 - fix detecting if basesystem is installed (mga#10722)
   thus fixing "basesystem package not selected"
+- partitioning:
+  o fix sizing partition widgets
 
 Version 16.25 - 19 January 2014
 
