@@ -1,3 +1,6 @@
+- diskdrake:
+  o fix sizing partition widgets
+
 Version 16.23 - 16 January 2014
 
 - dont remove pulseaudio-module-bluetooth (mga#12323)
